--- a/app_server/views/about.pug
+++ b/app_server/views/about.pug
@@ -3,7 +3,7 @@ extends layout.pug
 block content
   section#about
     h2 About Us
-    p A To-Do List project is a classic and popular choice for learning and practicing web development. In the todolist we can note down our daily routens and imoortant works. 
-   
-//index.html
-
+    p This website helps you to note your tasks, important works,grocery,shopping details,daily rouitnes and more.
+      
+    p
+      
