--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title To-Do List
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css")
+    link(rel="stylesheet",href="/stylesheets/amazon-style.css")
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
